Add pre-commit hook for code formatting check using spotless